--- a/index.html
+++ b/index.html
@@ -640,6 +640,15 @@ body {
                             <span class="nav__text">CERTIFICATIONS</span>
                         </a>
                     </li>
+
+ <li class="nav__item">
+                        <a class="nav__link" href="#certifications">
+                            <span class="nav__line"></span>
+                            <span class="nav__text">CONNECT ME</span>
+                        </a>
+                    </li>
+
+                    
                     <li class="nav__item">
                         <a class="nav__link" href="#skills">
                             <span class="nav__line"></span>
