--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@ body {
 
 
 
+    text-align: center;
+}
+
+.form-status.success {
+    color: var(--link); /* Greenish color */
+}
+
+.form-status.error {
+    color: #ef4444; /* Red color */
+}
+
+
+
+
 /* Contact Form Styling */
 .contact-form {
     max-width: 500px;
@@ -102,6 +116,8 @@ body {
     margin-bottom: 8px;
     font-weight: 500;
     color: var(--text-primary);
+    position: relative; /* ADDED: Give label a stacking context */
+    z-index: 2; /* ADDED: Ensure label is above potential overlays */
 }
 
 .contact-form input[type="text"],
@@ -115,6 +131,8 @@ body {
     color: var(--text-primary);
     font-size: 16px;
     box-sizing: border-box; /* Include padding in width */
+    position: relative; /* ADDED: Give input/textarea a stacking context */
+    z-index: 2; /* ADDED: Ensure input/textarea are above potential overlays */
 }
 
 .contact-form input[type="text"]:focus,
@@ -135,6 +153,8 @@ body {
     font-weight: 600;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
+    position: relative; /* ADDED: Give button a stacking context */
+    z-index: 2; /* ADDED: Ensure button is above potential overlays */
 }
 
 .contact-form button:hover {
@@ -155,11 +175,6 @@ body {
 .form-status.error {
     color: #ef4444; /* Red color */
 }
-
-
-
-
-
 
 
         
