--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ body {
 
 /* Cursor spotlight effect */
 .cursor-spotlight {
+    display: none !important;
     position: fixed;
     width: 800px;
     height: 800px;
