--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <div class="cert__time">2025</div>
                             <div class="cert__content">
                                 <h3 class="cert__title">
-                                    <a class="cert__link" href="#" target="_blank">
+                                    <a class="cert__link" href="https://pentesterlab.com/certs/f292aa626714dd1aad12f38e87f26a" target="_blank">
                                         <span>Recon Badge · PentesterLab</span>
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                             <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
@@ -201,7 +201,7 @@
                             <div class="cert__time">2024</div>
                             <div class="cert__content">
                                 <h3 class="cert__title">
-                                    <a class="cert__link" href="#" target="_blank">
+                                    <a class="cert__link" href="https://candidate.speedexam.net/certificate.aspx?SSTATE=am4131EniU8ntjp4bO5mXQCwhqTom5k31Qqu5uQTE6qwK4zIJ3z8XPi2isbaA5+RCs6HnqTvj/wFOLjHHYt3lwAapkS9ByvzSNI11obXRow=" target="_blank">
                                         <span>Certified AppSec Practitioner (CAP) · The SecOps Group</span>
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                             <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
@@ -214,7 +214,7 @@
                             <div class="cert__time">2023</div>
                             <div class="cert__content">
                                 <h3 class="cert__title">
-                                    <a class="cert__link" href="#" target="_blank">
+                                    <a class="cert__link" href="https://drive.google.com/file/d/1JShdgsfPYDsY4cHhI4ESUCAuwAVXk8g7/view" target="_blank">
                                         <span>Practical Ethical Hacking · TCM Security</span>
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                             <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
@@ -227,7 +227,7 @@
                             <div class="cert__time">2022</div>
                             <div class="cert__content">
                                 <h3 class="cert__title">
-                                    <a class="cert__link" href="#" target="_blank">
+                                    <a class="cert__link" href="https://www.linkedin.com/posts/ashfaquejahan_cybersecurity-activity-6966395672455524352-yJEw/" target="_blank">
                                         <span>Certified Penetration Tester · RedTeam Hacker Academy</span>
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                             <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
