--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
                 <span class="nav__text">SKILLS</span>
             </a>
         </li>
+
+
+<li class="nav__item">
+            <a class="nav__link" href="#projects">
+                <span class="nav__line"></span>
+                <span class="nav__text">PROJECTS</span>
+            </a>
+        </li>
+
+        
         <li class="nav__item">
             <a class="nav__link" href="#contact">
                 <span class="nav__line"></span>
@@ -288,6 +298,47 @@
                 </div>
             </section>
 
+
+
+
+<section id="projects" class="section">
+    <div class="section__content">
+        <h2>Projects & Write-ups</h2>
+        <ol class="experience-list"> <!-- Reusing existing styling for a list with time -->
+            <li class="experience">
+                <div class="experience__time">DATE</div> <!-- E.g., "2023" or "AUG 2023" -->
+                <div class="experience__content">
+                    <h3 class="experience__title">
+                        <span>[CTF Name] Write-up: [Challenge Title]</span>
+                        <a class="experience__link" href="LINK_TO_YOUR_WRITEUP" target="_blank" aria-label="View CTF Write-up">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
+                            </svg>
+                        </a>
+                    </h3>
+                    <p class="experience__description">
+                        Detailed write-up for the "[Challenge Title]" challenge from the "[CTF Name]" competition. This write-up covers the full methodology, including initial reconnaissance, vulnerability identification (e.g., SQL Injection, RCE), exploitation steps, and post-exploitation techniques, demonstrating problem-solving skills in a simulated environment.
+                    </p>
+                    <ul class="experience__tags">
+                        <li class="tag">CTF</li>
+                        <li class="tag">Web Exploitation</li>
+                        <li class="tag">Binary Analysis</li> <!-- Adjust tags based on the CTF challenge -->
+                        <li class="tag">Forensics</li>
+                        <li class="tag">Recon</li>
+                        <li class="tag">Linux</li>
+                    </ul>
+                </div>
+            </li>
+            <!-- Add more CTF write-ups or projects here if you have them -->
+        </ol>
+    </div>
+</section>
+<!-- END OF NEW PROJECTS SECTION -->
+
+
+
+
+            
     <section id="contact" class="section">
     <div class="section__content">
         <h2>Get in Touch</h2>
