--- a/index.html
+++ b/index.html
@@ -305,30 +305,48 @@
     <div class="section__content">
         <h2>Projects & Write-ups</h2>
         <ol class="experience-list"> <!-- Reusing existing styling for a list with time -->
-            <li class="experience">
-                <div class="experience__time">DATE</div> <!-- E.g., "2023" or "AUG 2023" -->
-                <div class="experience__content">
-                    <h3 class="experience__title">
-                        <span>[CTF Name] Write-up: [Challenge Title]</span>
-                        <a class="experience__link" href="LINK_TO_YOUR_WRITEUP" target="_blank" aria-label="View CTF Write-up">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                                <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
-                            </svg>
-                        </a>
-                    </h3>
-                    <p class="experience__description">
-                        Detailed write-up for the "[Challenge Title]" challenge from the "[CTF Name]" competition. This write-up covers the full methodology, including initial reconnaissance, vulnerability identification (e.g., SQL Injection, RCE), exploitation steps, and post-exploitation techniques, demonstrating problem-solving skills in a simulated environment.
-                    </p>
-                    <ul class="experience__tags">
-                        <li class="tag">CTF</li>
-                        <li class="tag">Web Exploitation</li>
-                        <li class="tag">Binary Analysis</li> <!-- Adjust tags based on the CTF challenge -->
-                        <li class="tag">Forensics</li>
-                        <li class="tag">Recon</li>
-                        <li class="tag">Linux</li>
-                    </ul>
-                </div>
-            </li>
+
+
+
+<li class="experience">
+    <div class="experience__time">2024 SEPTEMBER</div> <div class="experience__content">
+        <h3 class="experience__title">
+            <span>Hack Havoc CTF Write-up: Comprehensive Solutions</span>
+            <a class="experience__link" href="LINK_TO_YOUR_FULL_WRITEUP_ON_GITHUB_OR_BLOG" target="_blank" aria-label="View Hack Havoc CTF Write-up">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
+                </svg>
+            </a>
+        </h3>
+        <p class="experience__description">
+            Detailed write-up covering multiple challenges from the "Hack Havoc" CTF hosted by CyberMaterial. This entry showcases a diverse range of cybersecurity skills, including:
+            <ul>
+                <li>**Web Exploitation:** Identifying and exploiting vulnerabilities like directory traversal, command injection, and Server-Side Template Injection (SSTI).</li>
+                <li>**OSINT (Open-Source Intelligence):** Leveraging social media, public records, and image analysis to gather crucial information and solve puzzles.</li>
+                <li>**Cryptography:** Deciphering various encoding and encryption schemes (e.g., Base58, Base64, Base92, ROT47, XOR, Trithemius cipher, Braille ASCII, Maritime Signal Code).</li>
+                <li>**Reverse Engineering:** Analyzing binary files, decompiling Python bytecode, and extracting hidden flags from obfuscated code and data.</li>
+            </ul>
+            Each solution details the methodology, tools used, and the thought process involved in overcoming the challenge.
+        </p>
+        <ul class="experience__tags">
+            <li class="tag">CTF</li>
+            <li class="tag">Web Exploitation</li>
+            <li class="tag">OSINT</li>
+            <li class="tag">Cryptography</li>
+            <li class="tag">Reverse Engineering</li>
+            <li class="tag">Vulnerability Research</li>
+            <li class="tag">Python</li>
+            <li class="tag">JavaScript</li>
+            <li class="tag">Linux</li>
+            <li class="tag">Burp Suite</li>
+            <li class="tag">ffuf</li>
+            <li class="tag">dcode.fr</li>
+            <li class="tag">Binary Analysis</li>
+        </ul>
+    </div>
+</li>
+
+            
             <!-- Add more CTF write-ups or projects here if you have them -->
         </ol>
     </div>
