--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
 <li class="experience">
     <div class="experience__time">2024 SEPTEMBER</div> <div class="experience__content">
         <h3 class="experience__title">
-            <span>Hack Havoc CTF Write-up: Comprehensive Solutions</span>
-            <a class="experience__link" href="LINK_TO_YOUR_FULL_WRITEUP_ON_GITHUB_OR_BLOG" target="_blank" aria-label="View Hack Havoc CTF Write-up">
+            <span>Hack Havoc CTF Write-up: Solutions</span>
+            <a class="experience__link" href="https://github.com/haroldfinch707/jahanaj098/blob/main/havoc-ctf-writeup.pdf" target="_blank" aria-label="View Hack Havoc CTF Write-up">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path>
                 </svg>
@@ -321,7 +321,7 @@
         <p class="experience__description">
             Detailed write-up covering multiple challenges from the "Hack Havoc" CTF hosted by CyberMaterial. This entry showcases a diverse range of cybersecurity skills, including:
             <ul>
-                <li>**Web Exploitation:** Identifying and exploiting vulnerabilities like directory traversal, command injection, and Server-Side Template Injection (SSTI).</li>
+                <li>Web Exploitation: Identifying and exploiting vulnerabilities like directory traversal, command injection, and Server-Side Template Injection (SSTI).</li>
                 <li>**OSINT (Open-Source Intelligence):** Leveraging social media, public records, and image analysis to gather crucial information and solve puzzles.</li>
                 <li>**Cryptography:** Deciphering various encoding and encryption schemes (e.g., Base58, Base64, Base92, ROT47, XOR, Trithemius cipher, Braille ASCII, Maritime Signal Code).</li>
                 <li>**Reverse Engineering:** Analyzing binary files, decompiling Python bytecode, and extracting hidden flags from obfuscated code and data.</li>
