--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
             Detailed write-up covering multiple challenges from the "Hack Havoc" CTF hosted by CyberMaterial. This entry showcases a diverse range of cybersecurity skills, including:
             <ul>
                 <li>Web Exploitation: Identifying and exploiting vulnerabilities like directory traversal, command injection, and Server-Side Template Injection (SSTI).</li>
-                <li>**OSINT (Open-Source Intelligence):** Leveraging social media, public records, and image analysis to gather crucial information and solve puzzles.</li>
-                <li>**Cryptography:** Deciphering various encoding and encryption schemes (e.g., Base58, Base64, Base92, ROT47, XOR, Trithemius cipher, Braille ASCII, Maritime Signal Code).</li>
-                <li>**Reverse Engineering:** Analyzing binary files, decompiling Python bytecode, and extracting hidden flags from obfuscated code and data.</li>
+                <li>OSINT (Open-Source Intelligence): Leveraging social media, public records, and image analysis to gather crucial information and solve puzzles.</li>
+                <li>Cryptography: Deciphering various encoding and encryption schemes (e.g., Base58, Base64, Base92, ROT47, XOR, Trithemius cipher, Braille ASCII, Maritime Signal Code).</li>
+                <li>Reverse Engineering: Analyzing binary files, decompiling Python bytecode, and extracting hidden flags from obfuscated code and data.</li>
             </ul>
             Each solution details the methodology, tools used, and the thought process involved in overcoming the challenge.
         </p>
