--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </a>
         </h3>
         <p class="experience__description">
-            Actively participate in public and private bug bounty programs on platforms like HackerOne, Bugcrowd and yeswehack. Proactively discover and report security vulnerabilities in web applications and Android applications. Develop proof-of-concept exploits and write clear, concise vulnerability reports with actionable remediation steps, contributing to the enhancement of real-world application security.
+            Actively participate in public and private bug bounty programs on platforms like HackerOne, Bugcrowd and yeswehack. 
         </p>
         <ul class="experience__tags">
             <li class="tag">Web Hacking</li>
