--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <h1 class="header__name">Ashfaque Jahan</h1>
                 <h2 class="header__title">Penetration Tester , Bug Bounty hunter</h2>
                 <p class="header__tagline">I hunt bugs and secure digital experiences<br>for the web.</p>
+
+                <a href="/Ashfaque_Jahan_Resume.pdf" target="_blank" class="resume-button">
+            View Resume
+        </a>
             </div>
 
 <nav class="nav">
