--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
                 <span class="nav__text">CONNECT ME</span>
             </a>
         </li>
+
+
+<li class="nav__item">
+    <a class="nav__link" href="/Ashfaque_Jahan_Resume.pdf" target="_blank">
+        <span class="nav__line"></span>
+        <span class="nav__text">RESUME</span>
+    </a>
+</li>
+        
     </ul>
 </nav>   
 
