--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
 <li class="nav__item">
-    <a class="nav__link" href="https://github.com/haroldfinch707/jahanaj098/blob/main/resume.pdf" target="_blank">
+    <a class="nav__link" href="https://raw.githubusercontent.com/haroldfinch707/jahanaj098/main/resume.pdf" target="_blank">
         <span class="nav__line"></span>
         <span class="nav__text">RESUME</span>
     </a>
